Fix alignment on Upload Photos button.

--- a/app/assets/stylesheets/sections/_dashboard.scss
+++ b/app/assets/stylesheets/sections/_dashboard.scss
@@ -250,6 +250,7 @@ section.listings {
    }
   .fileinput-button {
     display: block;
+    text-align: center;
   }
 }
 
